clusters/AWS/YAML/hive-metastore-postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hive-metastore-postgres
  labels:
    app: hive-pod
spec:
  nodeSelector:
    app: "app"
    role: "hive"
  tolerations:
    - key: "role"
      operator: "Equal"
      value: "hive"
      effect: "NoSchedule"
  serviceAccountName: trino

  containers:
    - name: hive-metastore
      image: bde2020/hive:latest
      ports:
        - containerPort: 9083
      command: ["/bin/bash", "-c"]
      args:
        - |
          [...]
      volumeMounts:
        - name: hive-site-config
          mountPath: /opt/hive/conf
        - name: core-site-config
          mountPath: /opt/hadoop-2.7.4/etc/hadoop/core-site.xml
          subPath: core-site.xml
        - name: hms-warehouse
          mountPath: /tmp/hive/warehouse
        - name: s3a-jars
          mountPath: /s3-jars
      imagePullPolicy: IfNotPresent

    - name: postgres
      image: postgres:13
      resources:
        requests: { cpu: "500m", memory: "0.5Gi" }
        limits:   { cpu: "500m", memory: "0.5Gi" }
  volumes:
    - name: hive-site-config
      configMap:
        name: hive-site-config
    - name: core-site-config
      configMap:
        name: core-site-config
    - name: hms-warehouse
      emptyDir: {}
    - name: s3a-jars
      emptyDir: {}
